Fixed spacing for smaller devices

--- a/src/idsk/components/intro-block/intro-block.scss
+++ b/src/idsk/components/intro-block/intro-block.scss
@@ -55,9 +55,10 @@
     }
 
     .idsk-search-component{
-      margin-bottom: 50px;
+      margin-bottom: 30px;
       @include mq($from: desktop) {
         margin-top: 50px;
+        margin-bottom: 50px;
       }
     }
 
